--- a/ui-framework-demo/src/main/resources/templates/kendoui/kendoui.html
+++ b/ui-framework-demo/src/main/resources/templates/kendoui/kendoui.html
@@ -3,8 +3,16 @@
 <head> 
     <title th:text="${name} + ' Demo'" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="core/kendoui/styles/kendo.common.min.css" />
+    <link rel="stylesheet" href="core/kendoui/styles/kendo.default.min.css" />
+
+    <script src="core/kendoui/js/jquery.min.js"></script>
+    <script src="core/kendoui/js/kendo.all.min.js"></script>
 </head>
-<body>
-    <p th:text="'Welcom to ' + ${name} + '!'" />
-</body>
+	<body>
+	    <p th:text="'Welcom to ' + ${name} + '!'" />
+	    <div style="margin:20px 0;"></div>
+	    <div id="grid"></div>
+	    <script type="text/javascript" src="js/kendoui/grid.js"></script>
+	</body>
 </html>
