Easy UI和Kendo UI应用bootstrap主题

--- a/ui-framework-demo/src/main/resources/templates/kendoui/kendoui.html
+++ b/ui-framework-demo/src/main/resources/templates/kendoui/kendoui.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="core/kendoui/styles/kendo.common.min.css" />
     <link rel="stylesheet" href="core/kendoui/styles/kendo.default.min.css" />
+    <!-- <link rel="stylesheet" href="core/kendoui/styles/kendo.common-bootstrap.min.css" />
+    <link rel="stylesheet" href="core/kendoui/styles/kendo.bootstrap.min.css" /> -->
 
     <script src="core/kendoui/js/jquery.min.js"></script>
     <script src="core/kendoui/js/kendo.all.min.js"></script>
