点击超链接弹出明细窗口第一版

--- a/ui-framework-demo/src/main/resources/templates/easyui/easyui.html
+++ b/ui-framework-demo/src/main/resources/templates/easyui/easyui.html
@@ -15,7 +15,7 @@
 	    <div style="margin:20px 0;"></div>
 	    <table id="dg"></table>
 	    <div id="win" style="padding:10px;">
-	    	Coming Next！
+	    	客户明细界面未实现
 	    </div>
 	    <script type="text/javascript" src="js/easyui/grid.js"></script>
 	</body>
