--- a/ui-framework-demo/src/main/resources/templates/kendoui/kendoui.html
+++ b/ui-framework-demo/src/main/resources/templates/kendoui/kendoui.html
@@ -15,6 +15,7 @@
 	    <p th:text="'Welcom to ' + ${name} + '!'" />
 	    <div style="margin:20px 0;"></div>
 	    <div id="grid"></div>
+	    <div id="window"></div>
 	    <script type="text/javascript" src="js/kendoui/grid.js"></script>
 	</body>
 </html>
